# aruco-detect

./: .gitignore  CMakeLists.txt  README.md  aruco_test.cbp  cameraParameters.xml  cameraParameters.yml  compileProto.sh  default.xml  default.yml  installOpenCV.sh  zmqserver.cpp
aruco_test/: CMakeLists.txt  detect.cpp  main.cpp
aruco_test/aruco_board/: calib.yml  detect_board.cpp
aruco_test/aruco_marker/: aruco_detect  compileCommand.txt  detect_single.cpp  detect_single.h
aruco_test/charuco_board/: GUI.cpp  default.yml  detect_board_charuco.cpp
jetson-vision/: CMakeLists.txt
